Fix code blocks whitespace

--- a/website/src/css/theme.css
+++ b/website/src/css/theme.css
@@ -39,11 +39,6 @@ html[data-theme='dark'] .docusaurus-highlight-code-line {
   background-color: rgba(0, 0, 0, .25);
 }
 
-/* Do not split lines for `code` */
-code {
-  white-space: nowrap;
-}
-
 @font-face {
   font-family: 'Inter';
   font-style:  normal;
